--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 		<article class="col-md-5 col-sm-8">
 			<ul>
 				<li> 
-			<img src="Img/pumpkin1.png" alt="icon" width="70" class="img-fluid"></li>
-			<li><img src="Img/pumpkin2.png" alt="icon" width="70" class="img-fluid"></li>
-			<li><img src="Img/pumpkin3.png" alt="icon" width="70" class="img-fluid"></li>
-			<li><img src="Img/pumpkin4.png" alt="icon" width="70" class="img-fluid"></li>
+			<img src="img/pumpkin1.png" alt="icon" width="70" class="img-fluid"></li>
+			<li><img src="img/pumpkin2.png" alt="icon" width="70" class="img-fluid"></li>
+			<li><img src="img/pumpkin3.png" alt="icon" width="70" class="img-fluid"></li>
+			<li><img src="img/pumpkin4.png" alt="icon" width="70" class="img-fluid"></li>
 			
 			</ul>
 			
